@@ -27,7 +27,16 @@ SUBDIRS = doc
 
 man_MANS = perditiondb_ldap_makedb.8
 
-EXTRA_DIST = perditiondb_ldap_makedb perditiondb_ldap_makedb.8
+schema_sources = perdition.schema
+
+EXTRA_DIST = perditiondb_ldap_makedb perditiondb_ldap_makedb.8 \
+		$(schema_sources)
+
+install-data-hook: $(schema_sources)
+	if test -n "@ldap_schemadir@" -a -w "@ldap_schemadir@"; then \
+		install -m644 $< $(DESTDIR)@ldap_schemadir@/perdition.schema;\
+	fi
+
 
 bin_SCRIPTS = perditiondb_ldap_makedb
 
